add group update endpoint
