# internal/service/httpserver/new.go
@@ -16,6 +16,7 @@ type UserService interface {
 type GroupService interface {
 	GetUserGroups(ctx context.Context, userID uuid.UUID) ([]models.Group, error)
 	CreateGroup(ctx context.Context, creatorID uuid.UUID, group *models.Group) (*models.Group, error)
+	UpdateGroup(ctx context.Context, userID uuid.UUID, group models.UpdateGroupRequest) (*models.Group, error)
 	JoinGroup(ctx context.Context, userID uuid.UUID, code string) error
 	LeaveGroup(ctx context.Context, userID, groupID uuid.UUID) error
 	DeleteGroup(ctx context.Context, initiatorID uuid.UUID, groupID uuid.UUID) error
